# AIDS_Trojan

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
build-AIDS_Trojan-MVSC-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-AIDS_Trojan-MVSC-Debug/.cmake/api/v1/reply/: cache-v2-06e78007860c8dd57f72.json  cmakeFiles-v1-55dbe08da44c8457a364.json  codemodel-v2-a38e215fdc4dacb1e175.json  directory-.-Debug-dd443bdafbf23c49178d.json  index-2023-02-02T10-50-09-0680.json  target-AIDS_Trojan-Debug-e0aa5ed5a3beb9faea7c.json
build-AIDS_Trojan-MVSC-Debug/.qtc_clangd/: compile_commands.json
build-AIDS_Trojan-MVSC-Debug/.qtc_clangd/.cache/clangd/index/: AESEncryptor.cpp.E505FA69079C06C2.idx  RansomController.cpp.8869562F9A21EBB1.idx  RansomController.h.AF5832A62C194E5C.idx  Windows.h.721B0EF4B11164F5.idx  __msvc_chrono.hpp.8E6D3AFFC33926DD.idx  __msvc_iter_core.hpp.8665C24410DAFEF9.idx  __msvc_system_error_abi.hpp.016C27A2A622F257.idx  __msvc_xlocinfo_types.hpp.381A509BA7D8C86F.idx  algorithm.E16F84B514A4303F.idx  asn1.h.6EA375F867C88016.idx  bio.h.B2DBBCFA1BB8090C.idx  (+178 more)
build-AIDS_Trojan-MVSC-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-AIDS_Trojan-MVSC-Release/.qtc_clangd/: compile_commands.json
cmake/: app_utils.cmake
controller/: RansomController.cpp  RansomController.h
service/: AESEncryptor.cpp  AESEncryptor.h  EncryptorService.h  Folderservice.h  folderservice.cpp
util/: util.cpp  util.h
view/: screenblocker.cpp  screenblocker.h
(+172 files in other folders)
